--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -19,3 +19,7 @@ databaseChangeLog:
       file: db/changelog/changes/09-create-categories-table.yaml
   - include:
       file: db/changelog/changes/10-create-books_categories-table.yaml
+  - include:
+      file: db/changelog/changes/11-create-shopping_carts-table.yaml
+  - include:
+      file: db/changelog/changes/12-create-cart_items-table.yaml
