--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-jwt.expiration=120000
+#logging.level.org.springframework.security=DEBUG
+
+jwt.expiration=1200000
 jwt.secret=mate-academy-studying-project-book-store
