--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MYSQLDB_USER=sql
-MYSQLDB_PASSWORD=123456
+MYSQLDB_USER=user
+MYSQLDB_PASSWORD=12345678
 MYSQLDB_DATABASE=books
-MYSQL_LOCAL_PORT=3306
+MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
 
 SPRING_LOCAL_PORT=8088
