--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: "3.8"
 
 services:
   mysqldb:
-    platform: linux/arm64
-    image: mysql:8.0
-    restart: unless-stopped
+    image: "mysql:8.0"
+    restart: always
     env_file: ./.env
     environment:
+      - MYSQL_ROOT_PASSWORD=$MYSQLDB_PASSWORD
       - MYSQL_USER=$MYSQLDB_USER
       - MYSQL_PASSWORD=$MYSQLDB_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost"]
+      test: ["CMD-SHELL", "mysqladmin ping -h mysqldb"]
       interval: 30s
       timeout: 30s
       retries: 3
@@ -22,7 +22,7 @@ services:
     depends_on:
       - mysqldb
     restart: on-failure
-    image: posts-service
+    image: book_store
     build: .
     env_file: ./.env
     ports:
@@ -35,4 +35,4 @@ services:
         "spring.datasource.password" : "$MYSQLDB_PASSWORD",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect"
       }'
-      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
+      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:$DEBUG_PORT"
