--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:tc:mysql:8:///book_store_test
+spring.datasource.username=test
+spring.datasource.password=test
 
-jwt.expiration=120000
+jwt.expiration=1200000
 jwt.secret=mate-academy-studying-project-book-store
